--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -1,21 +1,30 @@
-fetch_campaigns_task:
+fetch_campaigns_with_budget_task:
   description: >
     Get a collection campaigns for account {account_id}.
     Use the pageIndex and pageSize parameters to get all campaigns for the account.
-    If the budget is not provided  or is zero, ignore the campaign.
-    Use the pageIndex and pageSize parameters to get all lineitems for the campaign.
     Do not make more API calls than necessary.
-    Reformat each campaign by removing the 'type' field, remap the fields 'name', 'budget' and 'budgetSpent' in 'attributes' to the root level, then remove the 'attributes' field.
-    If the budget is not provided, set it to 0.
+    If the budget is not provided or is less than 1, ignore the campaign.
+    Reformat each campaign by removing the 'type' field, remap the fields  in 'attributes' to the root level, then remove the 'attributes' field.
+    do not use "```json" or "```" in the output.
   expected_output: >
     A collection of campaigns for the account formatted as JSON.
 
 campaigns_budget_pie_chart:
   description: >
     Create a pie chart from the data in the campaigns collection.
-    The 'values' should be the sum of the 'budget' field for each campaign.
     The 'labels' should be the 'name' field for each campaign.
-    The 'title' should be 'Campaign Budgets'.
-    The 'file_name' should be 'output/campaign_budget_pie_chart.png'.
+    The 'title' should be 'Campaign Budgets for Account {account_id}'.
+    The 'file_name' should be 'campaign_budget_pie_chart.png'.
+    The 'path' should be 'output'.
   expected_output: >
-    A pie chart image.
+    A pie chart image file_name.
+
+campaigns_report:
+  description: >
+    Create a report in Markdown format, with the data from the campaigns collection.
+    The report should show a table with the campaign name, start date, budget, and budgetSpent.
+    The report should include a pie chart of the campaign budgets. Us only the file name of the pie chart, do not include the path.
+    The 'title' should be Campaign Budget Report for Account {account_id}.
+    do not use "```markdown" or "```" in the markdown file.
+  expected_output: >
+    A markdown file with the report.
