--- a/part_3/pyproject.toml
+++ b/part_3/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = ">=3.12,<=3.13"
 crewai = { extras = ["tools"], version = "^0.51.0" }
+matplotlib = "^3.9.2"
 
 [tool.poetry.scripts]
 part_3 = "part_3.main:run"
