--- a/part_3/src/part_3/config/tasks.yaml
+++ b/part_3/src/part_3/config/tasks.yaml
@@ -2,9 +2,9 @@
 campaigns:
   description: >
     Use the {accountId} to get a list of campaigns.
+    Make sure to check with a human if this is the correct account.
   expected_output: >
     A list of campaign ids for the account as a JSON array. Do not include the whold campaign object. Only the campaign Id.
-  agent: campaign_manager
   
 
 create_impressions_report:
