--- a/part_2/pyproject.toml
+++ b/part_2/pyproject.toml
@@ -3,11 +3,13 @@ name = "part_2"
 version = "0.1.0"
 description = "part_2 using crewAI"
 authors = ["Peter Milne <helipilot50@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<=3.13"
 crewai = { extras = ["tools"], version = "^0.51.0" }
 matplotlib = "^3.9.2"
+streamlit = "^1.38.0"
 
 [tool.poetry.scripts]
 part_2 = "part_2.main:run"
