--- a/part_3/pyproject.toml
+++ b/part_3/pyproject.toml
@@ -8,8 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.12,<=3.13"
 crewai = { extras = ["tools"], version = "^0.51.0" }
 matplotlib = "^3.9.2"
-chainlit = "^1.1.404"
-streamlit = "^1.38.0"
+panel = "^1.4.5"
 
 [tool.poetry.scripts]
 part_3 = "part_3.main:run"
