--- a/part_3/src/part_3/config/tasks.yaml
+++ b/part_3/src/part_3/config/tasks.yaml
@@ -1,38 +1,14 @@
 
 campaigns:
   description: >
-    Use the {accountId} to get a list of campaigns.
-    Make sure to check with a human if this is the correct account.
+    Use the {accountId} and use it to get a list of campaigns.
+    ask the human if this is a valid account id.
+    
   expected_output: >
     A list of campaign ids for the account as a JSON array. Do not include the whold campaign object. Only the campaign Id.
   
 
-create_impressions_report:
-  description: >
-     Use the list of campaign ids, with the date range of {startDate} and {endDate}, to create an impression report.
-  expected_output: >
-    A report creation object in JSON.
-  agent: campaign_reporter
-  context:
-    - campaigns
 
-
-check_report_status:
-  description: >
-    Check the status of the report using id.
-  expected_output: >
-    The status of the report.
-  agent: campaign_reporter
-  context:
-    - create_impressions_report
  
 
-download_report:
-  description: >
-    Download the report using id.
-  expected_output: >
-    The report as JSON.
-  agent: campaign_reporter
-  context:
-    - check_report_status
   
