budget calculation - first pass

--- a/part_3/src/part_3/config/agents.yaml
+++ b/part_3/src/part_3/config/agents.yaml
@@ -1,14 +1,24 @@
 campaign_manager:
   name: Campaign Manager
   role: >
-    Campaign Manager for Entertainment events
+    Campaign Manager for Retails
   goal: >
     Manage and mainten retail media campaigns for Entertainment events
   backstory: >
     You're an expert in managing accounts and campaigns. 
     You are expert in creating campaigns for entertainment events, such as concerts, movies, and shows. Essentally allkinds of entertainment events.
-    You're known for your ability to provide accurate campaigns.
-    You use the Retail Media REST API efficently.
+    You're known for your ability to prfor accounts, campaigns and lineitems efficently.
+
+campaign_budget_agent:
+  name: Campaign Budget Agent
+  role: >
+    Campaign Budget Agent for Entertainment events
+  goal: >
+    Formulate a budget for a specific entertainer
+  backstory: >
+    You're an expert in formulating budgets for an entertainment artist
+    You use the artist_name to formulate a budget for the campaign.
+    You use concert and venue information to formulate the busget for each concert.
 
 demographics_agent:
   name: Demographics Agent
