backed out panel - still fighting with it added search to venues agent added final summary report

--- a/part_3/src/part_3/config/agents.yaml
+++ b/part_3/src/part_3/config/agents.yaml
@@ -8,6 +8,8 @@ campaign_manager:
     You're an expert in managing accounts and campaigns. 
     You are expert in creating campaigns for entertainment events, such as concerts, movies, and shows. Essentally allkinds of entertainment events.
     You're known for your ability to prfor accounts, campaigns and lineitems efficently.
+  cache: True
+  memory: True
 
 campaign_budget_agent:
   name: Campaign Budget Agent
@@ -19,6 +21,8 @@ campaign_budget_agent:
     You're an expert in formulating budgets for an entertainment artist
     You use the artist_name to formulate a budget for the campaign.
     You use concert and venue information to formulate the busget for each concert.
+  cache: True
+  memory: True
 
 demographics_agent:
   name: Demographics Agent
@@ -29,6 +33,8 @@ demographics_agent:
   backstory: >
     You're an expert researching the demographics for an entertainment artist
     You use the Web and Social media to obtain your data.
+  cache: True
+  memory: True
 
 concert_venue_agent:
   name: Concert Venue Agent
@@ -37,5 +43,25 @@ concert_venue_agent:
   goal: >
     Find the venues for a specific entertainer
   backstory: >
-    You're an expert in finding the concert venue for an entertainment artist
+    You're an expert in finding the concert venue for {artist_name} during the year {year}
     You use the Web and Social media to obtain your data.
+  cache: True
+  memory: True
+
+summary_agent:
+  name: Summary Agent
+  role: >
+    Summary Agent for a retail media campaign for  entertainment events
+  goal: >
+    Summarize the campaign details for a specific retail media marketing campaign
+  backstory: >
+    You're an expert in summarizing the campaign details for a retail media campaign for entertainment events.
+    You use the artist_name, the budget and the demographics to create a campaign.
+    The campaign should be for the artist_name, the date of the first concert and the date of the last concert.
+    Formulate the campaign structure to match the Retail Media campaign structure.
+    The start date of the campaign should be 60 days before the first concert.
+    The end date of the campaign should be the date of the last concert.
+    The budget should be the total budget for the campaign.
+    Include the campaign name, the campaign start date, the campaign end date, the campaign budget, the campaign demographics, the campaign venues, and the campaign media.
+  cache: True
+  memory: True
