improvements to creating campaigns and lineitems

--- a/part_3/src/part_3/config/tasks.yaml
+++ b/part_3/src/part_3/config/tasks.yaml
@@ -42,13 +42,31 @@ formulate_budget:
 
 create_campaign:
   description: >
-    Use the {artist_name}, the budget and the demographics to create a campaign.
-    The campaign should be for the {artist_name}, the date of the first concert and the date of the last concert.
-    Formulate the campaign structure to match the Retail Media campaign structure.
-    The start date of the campaign should be 60 days before the first concert.
-    The end date of the campaign should be the date of the last concert.
-    The budget should be the total budget for the campaign.
-    Include the campaign name, the campaign start date, the campaign end date, the campaign budget, the campaign demographics, the campaign venues, and the campaign media.
+    Use Retail Media API to create the campaign with:
+     The {artist_name}, the budget and the demographics to create a campaign.
+     The campaign name shouult contain the {artist_name}, the {year}, the date of the first concert and the date of the last concert.
+     Formulate the campaign structure to match the Retail Media campaign structure.
+     The start date of the campaign should be 60 days before the first concert.
+     The end date of the campaign should be the date of the last concert.
+     The budget should be the total budget for the campaign.
+     Include the campaign name, the campaign start date, the campaign end date, the campaign budget, the campaign demographics, the campaign venues, and the campaign media.
+    Example campaign inout data: {{"name": "Taylor Swift Concert Tour 2025",
+            "accountId": "4",
+            "startDate": "2025-01-01",
+            "endDate": "2025-12-31",
+            "budget": 1280000,
+            "monthlyPacing": 500,
+            "dailyBudget": 10,
+            "isAutoDailyPacing": False,
+            "dailyPacing": 10,
+            "type": "auction",
+            "clickAttributionWindow": "30D",
+            "viewAttributionWindow": "None",
+            "clickAttributionScope": "sameSkuCategory",
+            "viewAttributionScope": "sameSkuCategory",
+        }}
+    The expected output is the campaign returned from the Retail Media API
+    
     
 
   expected_output: >
@@ -58,10 +76,25 @@ create_lineitems:
   description: >
     Use the campaign details to create line items for the campaign.
     For each concert, create a line item, with the following attributes:
-      name: {artist_name} - {venue} - {concert_date}
+      name: {artist_name} {year} - venue, city, country - concert date
       budget: budget amount for the concert
       startDate: 90 days before the concert date
       endDate: 1 day concert date
+      campaignId: the campaign id
+      Example input data for a new lineitem: {{
+            "name": Taylor Swift 2025 - AccorHotels Arena, Paris, France - 2025-05-20,
+            "campaignId": "626444481539563520",
+            "status": "paused",
+            "targetRetailerId": "1106",
+            "budget": 50,
+            "startDate": "2025-10-1",
+            "endDate": "2025-12-31",
+            "bidStrategy": "conversion",
+            "targeBid": 1.0,
+            }}
+    when the linitems are created, fetch the linitems for the campaign  using the Retail Media API
+    the results of the API are the expected output
+    
 
   expected_output: >
     A JSON array of line items for the campaign.
@@ -72,7 +105,7 @@ summary:
     Include:
     1. the Account name
     2. the campaign: id, name, start date, end date, total budget.
-    3. A table  with these columns: venue, concert date, seating capacity, budget amount.
+    3. A table  with these columns: venue, concert date, seating capacity, budget amount, lineitem id, lineitem startDate and lineitem endDate
     4. A summary of the demographics for the artist.
 
   expected_output: >
