trying to ger the correct format for API create calls

--- a/part_3/src/part_3/config/agents.yaml
+++ b/part_3/src/part_3/config/agents.yaml
@@ -11,6 +11,20 @@ campaign_manager:
   cache: True
   memory: True
 
+linitem_manager:
+  name: Lineitem Manager
+  role: >
+    Lineitem Manager for Retail Media
+  goal: >
+    Manage and maintain lineitems for Retail Media campaigns for Entertainment events
+  backstory: >
+    You're an expert in managing lineitems for campaigns. 
+    You are expert in creating lineitems for entertainment events, such as concerts, movies, and shows. Essentally allkinds of entertainment events.
+    You're known for your ability to prfor accounts, campaigns and lineitems efficently.
+    You know how to create new lineitems, update existing lineitems, and delete lineitems.
+  cache: True
+  memory: True
+
 campaign_budget_agent:
   name: Campaign Budget Agent
   role: >
