--- a/part_3/src/part_3/config/tasks.yaml
+++ b/part_3/src/part_3/config/tasks.yaml
@@ -1,6 +1,10 @@
 account:
   description: >
-    Use the account number of {account_id} to get the account details.
+    Use the  Retail Media REST API to get a list of accounts for this user.
+    Remember the result.
+    Do not hallucinate.
+    DO not fabricate data.
+    Use the {account_id} to get the specific from the list of accounts
   expected_output: >
     A JSON object with the account details.
 
@@ -31,14 +35,58 @@ find_concert_venues:
 
 formulate_budget:
   description: >
-    Formulate an advertising budget for an online advertising campaign using the {artist_name}, the location of the venues and their seating capacity.
-    Provide a total budget for the advertising campaign.
+    Formulate an advertising budget for a digital advertising campaign using the {artist_name}, the location of the venues and their seating capacity.
+    Provide a total budget for the digital advertising campaign.
     For each concert, formulate a budget amount based on the venue and geographic location. These values should be based on the seating capacity of the venue and the location of the venue.
     Express the budget in USD.
-    Ask the human if they would like to proceed with the budget.
+
+    Here's a structured approach to help you get started:
+
+    1. **Estimate Revenue Goals**
+      - **Determine Ticket Sales Revenue**: Estimate the total revenue from ticket sales. For example, if each concert has 20,000 tickets at an average price of $150, the revenue per concert would be $3,000,000.
+      - **Total Concerts**: Multiply by the number of concerts. If there are 50 concerts, the total revenue would be $150,000,000.
+
+    2. **Allocate Advertising Budget**
+      - **Percentage of Revenue**: A common rule of thumb is to allocate 15%-20% of the total potential gross revenue to advertising². For Taylor Swift's concerts, this would be:
+        - **15% of $150,000,000**: $22,500,000
+        - **20% of $150,000,000**: $30,000,000
+
+    3. **Break Down the Budget**
+      - **Digital Advertising**: Allocate a significant portion to digital platforms (e.g., social media, search engines, streaming services). This could be around 60%-70% of the total advertising budget.
+        - **Example**: If the total budget is $25,000,000, then $15,000,000 to $17,500,000 could be for digital advertising.
+      - **Traditional Media**: Allocate the remaining budget to traditional media (e.g., TV, radio, print).
+        - **Example**: $7,500,000 to $10,000,000 for traditional media.
+
+    4. **Digital Advertising Strategy**
+      - **Social Media Ads**: Platforms like Instagram, Facebook, TikTok, and Twitter are crucial for reaching Taylor Swift's fanbase.
+      - **Search Engine Marketing (SEM)**: Use Google Ads to target keywords related to the concerts.
+      - **Streaming Services**: Advertise on music streaming platforms like Spotify and Apple Music.
+      - **Influencer Partnerships**: Collaborate with influencers to promote the concerts.
+      - **Retail Media**: Utilize retail media platforms to reach audiences while they shop online.
+
+
+    Example Calculation
+    If the goal is to generate $45,000,000 in ticket sales from digital advertising:
+      - **Ticket Price**: $150
+      - **Tickets Sold**: 300,000 tickets
+      - **Orders Needed**: 111,111 orders (assuming 2.7 tickets per order)
+      - **Unique Ad Clicks Needed**: 5,555,550 clicks (assuming 2% conversion rate)
+      - **Total Ad Clicks Needed**: 6,944,438 clicks (assuming 80% unique clicks)
+      - **Cost Per Click (CPC)**: $0.50
+      - **Digital Advertising Budget**: $3,472,219
+
+    Example Budget Allocation for each venue:
+      "venue": "Stade de France"
+      "date": 2025-05-20
+      "city": "Paris"
+      "country": "France"
+      "seating_capacity": 80000
+      "averageTicketPrice": 150
+      "estimatedRevenue": 12000000
+      "digitalAdvertisingBudget": 1800
 
   expected_output: >
-    A JSON object with the budget for the campaign.
+    A JSON object with the budget for the campaign and each venue.
 
 create_campaign:
   description: >
@@ -66,9 +114,9 @@ create_campaign:
             "clickAttributionScope": "sameSkuCategory",
             "viewAttributionScope": "sameSkuCategory",
         
-    do not add any fields not in the example input data.
-    output the new campaign from the Retail Media API.
-    
+    do not add any fields not in the example campaign input data.
+    use the Retail Media API to create the campaign.
+
   expected_output: >
     A JSON object with the campaign details.
 
@@ -81,7 +129,7 @@ create_lineitems:
       startDate: 90 days before the concert date
       endDate: 1 day concert date
       campaignId: new campaign id
-      Example input data for a new lineitem: {{
+      Example input data for a new lineitem: 
             "name": Taylor Swift 2025 - AccorHotels Arena, Paris, France - 2025-05-20,
             "campaignId": new campaign id,
             "status": "paused",
@@ -91,10 +139,8 @@ create_lineitems:
             "endDate": "2025-12-31",
             "bidStrategy": "conversion",
             "targeBid": 1.0,
-            }}
-    when the linitems are created, fetch the linitems for the campaign  using the Retail Media API
-    the results of the API are the expected output
-    
+    Create the lineitems using the Retail Media API.
+    Once the linetems are created, fetch the linitems for the campaign  using the Retail Media API
 
   expected_output: >
     A JSON array of line items for the campaign.
@@ -103,7 +149,7 @@ summary:
   description: >
     Provide a summary of the campaign.
     Include:
-    1. the account: name, contact, email using the {account_id}
+    1. the account: name, contact, email. Fetch the account using the {account_id}
     2. the new campaign: id, name, start date, end date, total budget.
     3. the new auction lineitems as a table with these columns: venue, concert date, seating capacity, budget amount, lineitem id, lineitem startDate and lineitem endDate
     4. A summary of the demographics for the artist.
