--- a/part_3/.env.example
+++ b/part_3/.env.example
@@ -12,3 +12,8 @@ AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
 OPENAI_API_VERSION=
 
 RAPID_API_KEY=
+
+# only if you use GROQ
+GROQ_API_KEY=
+GROQ_AI_MODEL_NAME=
+GROQ_AI_SYNONYM_MODEL_NAME=
