env update in part 1

--- a/part_1/.env.example
+++ b/part_1/.env.example
@@ -9,5 +9,7 @@ RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
 # AZURE_OPENAI_API_KEY=
 # AZURE_OPENAI_ENDPOINT=
 # AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
-# OPENAI_API_VERSION=
+# OPENAI_API_VERSION=2024-02-15-preview
 
+GROQ_API_KEY=
+GROQ_AI_MODEL_NAME=llama-3.1-70b-versatile
