--- a/part_2/.env.example
+++ b/part_2/.env.example
@@ -10,3 +10,7 @@ AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
 OPENAI_API_VERSION=
+
+#only of you use GROQ
+GROQ_API_KEY=
+GROQ_AI_MODEL_NAME=
