--- a/part_2/.env.example
+++ b/part_2/.env.example
@@ -1,16 +1,15 @@
-CRITEO_CLIENT_ID=
-CRITEO_CLIENT_SECRET=
+CRITEO_CLIENT_ID=<your criteo client id>
+CRITEO_CLIENT_SECRET=<your criteo client secret>
 OPENAI_API_KEY=
-OPENAI_MODEL_NAME=gpt-4o-mini
-SERPER_API_KEY=
+OPENAI_MODEL_NAME=
+
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
 
 # only if you use Azure
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
-OPENAI_API_VERSION=
+# AZURE_OPENAI_API_KEY=
+# AZURE_OPENAI_ENDPOINT=
+# AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
+# OPENAI_API_VERSION=2024-02-15-preview
 
-#only of you use GROQ
-GROQ_API_KEY=
-GROQ_AI_MODEL_NAME=
+GROQ_API_KEY=<your groq api key>
+GROQ_AI_MODEL_NAME=llama-3.1-70b-versatile
