part 2 with groq

--- a/part_2/pyproject.toml
+++ b/part_2/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.12,<=3.13"
 crewai = { extras = ["tools"], version = "^0.65.2" }
 matplotlib = "^3.9.2"
+langchain-groq = "^0.1.10"
 
 [tool.poetry.scripts]
 part_2 = "part_2.main:run"
