--- a/part_3/pyproject.toml
+++ b/part_3/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.12,<=3.13"
-crewai = { extras = ["tools"], version = "^0.51.0" }
+crewai = { extras = ["tools"], version = "^0.65.2" }
 matplotlib = "^3.9.2"
-panel = "^1.5.0"
+langchain-groq = "^0.1.10"
 
 [tool.poetry.scripts]
 part_3 = "part_3.main:run"
